--- a/src/main/resources/view/first_window_form.fxml
+++ b/src/main/resources/view/first_window_form.fxml
@@ -37,7 +37,7 @@
                   </LinearGradient>
                </textFill>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="30.0" layoutY="64.0" onAction="#btnOnAction" prefHeight="31.0" prefWidth="188.0" style="-fx-background-color: #337AB7;" text="GET STARTED" textFill="WHITE">
+            <JFXButton fx:id="btnStart" buttonType="RAISED" layoutX="30.0" layoutY="64.0" onAction="#btnOnAction" onMouseEntered="#onMouseEnterd" onMouseExited="#onMouseExited" prefHeight="31.0" prefWidth="188.0" style="-fx-background-color: #337AB7;" text="GET STARTED" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
